syntax = "proto3";

package example;

option java_multiple_files = false;
option java_package = "com.ymm.crm.example";
option java_outer_classname = "GreeterService";

service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}

    rpc SayHelloWithServerStreaming (HelloRequest) returns (stream HelloReply) {}

    rpc SayHelloWithClientStreaming (stream HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}